// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password should not render the password toggle button if the disableVisibility prop is enabled 1`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <input
      class="rmd-text-field rmd-password__input rmd-password__input--offset"
      id="password"
      type="password"
    />
    <button
      aria-label="Temporarily show password"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        remove_red_eye
      </i>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </div>
</div>
`;

exports[`Password should not render the password toggle button if the disableVisibility prop is enabled 2`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-password"
  >
    <input
      class="rmd-text-field rmd-password__input"
      id="password"
      type="password"
    />
  </div>
</div>
`;

exports[`Password should render correctly 1`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <input
      class="rmd-text-field rmd-password__input rmd-password__input--offset"
      id="password"
      type="password"
    />
    <button
      aria-label="Temporarily show password"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        remove_red_eye
      </i>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </div>
</div>
`;

exports[`Password should render correctly 2`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <label
      class="rmd-label rmd-floating-label"
      for="password"
    >
      Password
    </label>
    <input
      class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
      id="password"
      placeholder="Password..."
      type="password"
    />
    <button
      aria-label="Temporarily show password"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        remove_red_eye
      </i>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </div>
</div>
`;

exports[`Password should switch to a text input when the visibility button is clicked 1`] = `
<input
  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
  id="password"
  type="password"
/>
`;

exports[`Password should switch to a text input when the visibility button is clicked 2`] = `
<input
  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
  id="password"
  type="text"
/>
`;

exports[`Password should switch to a text input when the visibility button is clicked 3`] = `
<input
  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
  id="password"
  type="password"
/>
`;
